dockerify the image fetcher

--- a/ImageFetcher/appsettings.json
+++ b/ImageFetcher/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "Configuration": {
-    "ImageDirectory": "C:/dev/data/product_images/product_images",
-    "FontFile": "C:/dev/data/stocky/stocky.ttf",
+    "ImageDirectory": "/var/lib/images/product_images",
+    "FontFile": "./stocky.ttf",
     "MaxImageCacheMemoryMb": 256
   },
 
